--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,3 +19,17 @@ jobs:
 
       - name: buildprod.sh
         run: ./scripts/buildprod.sh
+
+      - id: auth
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_CREDENTIALS }}
+
+      - name: Set up Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
+
+      - name: Use gcloud CLI
+        run: gcloud info
+
+      - name: gcloud builds submit
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-435120/notely-ar-repo/peterkwilliams/notely:latest .
