--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,4 +35,4 @@ jobs:
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-435120/notely-ar-repo/peterkwilliams/notely:latest .
 
       - name: Deploy to Cloud run
-        run: gcloud run deploy --notely us-central1-docker.pkg.dev/notely-435120/notely-ar-repo/peterkwilliams/notely:latest --region us-central1 --allow-unauthenticated notely-435120 --max-instances=4
+        run: gcloud run deploy notely --peterkwilliams/notely us-central1-docker.pkg.dev/notely-435120/notely-ar-repo/peterkwilliams/notely:latest --region us-central1 --allow-unauthenticated notely-435120 --max-instances=4
