--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 20
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -18,7 +21,13 @@ jobs:
           go-version: "1.23.0"
 
       - name: buildprod.sh
-        run: ./scripts/buildprod.sh
+        run: ./scripts/buildprod.shgo
+
+      - name: Install goose
+        run: install github.com/pressly/goose/v3/cmd/goose@latest
+
+      - name: migrateup.sh
+        run: ./migrateup.sh
 
       - id: auth
         uses: google-github-actions/auth@v2
