--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -21,10 +21,10 @@ jobs:
           go-version: "1.23.0"
 
       - name: buildprod.sh
-        run: ./scripts/buildprod.shgo
+        run: ./scripts/buildprod.sh
 
       - name: Install goose
-        run: install github.com/pressly/goose/v3/cmd/goose@latest
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: migrateup.sh
         run: ./migrateup.sh
