--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ jobs:
         run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: migrateup.sh
-        run: ./migrateup.sh
+        run: ./scripts/migrateup.sh
 
       - id: auth
         uses: google-github-actions/auth@v2
